fix searchbar on firefox

--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 .center {
     margin: auto;
     max-width: 1140px;
+    min-width: 1140px;
 }
 
 table {
@@ -95,7 +96,6 @@ form {
 
 .style-1 input[type="text"] {
     padding: 10px;
-    font-size: 14px;
     border: solid 1px #ddd;
     background-color: #f2f2f2;
     transition: box-shadow 0.3s, border 0.3s;
